--- a/src/index.css
+++ b/src/index.css
@@ -459,23 +459,27 @@ Navbar
   background: var(--clr-white);
   box-shadow: var(--dark-shadow);
   z-index: 2;
-  height: 4rem;
+  min-height: 4rem;
   display: flex;
   align-items: center;
 }
+
 .nav-icons {
   display: none;
 }
+
 .nav-center {
   width: 90vw;
   max-width: 1170px;
   margin: 0 auto;
 }
+
 .nav-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .nav-toggle {
   background: transparent;
   border: none;
@@ -485,9 +489,11 @@ Navbar
   cursor: pointer;
   transition: var(--transition);
 }
+
 .nav-toggle:hover {
   transform: scale(1.2);
 }
+
 .nav-link {
   display: block;
   padding: 1rem 2rem;
@@ -498,62 +504,76 @@ Navbar
   cursor: pointer;
   font-size: 1rem;
 }
+
 .nav-link:hover {
   color: var(--clr-primary-1);
   background: var(--clr-primary-8);
   padding-left: 2.25rem;
 }
-/* nav toggle functionality */
+
+/* toggle (mobile) */
 .nav-links {
   height: 0;
   overflow: hidden;
   transition: var(--transition);
 }
-.show-links {
-  height: 280px;
-}
-/* nav at bigger screen size */
+
+/* PC 화면 */
 @media screen and (min-width: 992px) {
-  /* hide nav toggle button */
   .nav-toggle {
     display: none;
   }
-  /* show links */
+
+  /* <=== inline height:0px 덮어쓰기 */
   .nav-links {
-    height: auto;
+    height: auto !important;
+    overflow: visible !important;
     display: flex;
   }
+
+  .nav-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+
+  .nav-link {
+    margin-right: 1rem;
+  }
+
   .nav-center {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* optional */
     flex-wrap: wrap;
   }
+
   .nav-header {
-    padding: 0 0;
+    padding: 0;
   }
+
   .nav-link {
-    padding: 0 0;
+    padding: 0;
+    margin-right: 0.7rem;
   }
+
   .nav-link:hover {
     padding: 0;
     color: var(--clr-primary-5);
     background: transparent;
   }
+
   .nav-icons {
     display: flex;
   }
 
-  .nav-link {
-    margin-right: 0.7rem;
-  }
   .nav-icon {
     margin-right: 0.7rem;
     color: var(--clr-primary-5);
     font-size: 1.2rem;
     transition: var(--transition);
   }
+
   .nav-icon:hover {
     color: var(--clr-primary-8);
   }
